tests/baselines/reference/accessorsOverrideProperty8.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty8.ts(24,9): error TS2611: 'y' is defined as a property in class 'Base & Properties<{ readonly x: "boolean"; y: "string"; }>', but is overridden here in 'MyClass' as an accessor.


==== tests/cases/conformance/classes/propertyMemberDeclarations/accessorsOverrideProperty8.ts (1 errors) ====
    type Types = 'boolean' | 'unknown' | 'string';
    
    type Properties<T extends { [key: string]: Types }> = {
        readonly [key in keyof T]: T[key] extends 'boolean' ? boolean : T[key] extends 'string' ? string : unknown
    }
    
    type AnyCtor<P extends object> = new (...a: any[]) => P
    
    declare function classWithProperties<T extends { [key: string]: Types }, P extends object>(properties: T, klass: AnyCtor<P>): {
        new(): P & Properties<T>;
        prototype: P & Properties<T>
    };
    
    const Base = classWithProperties({
        get x() { return 'boolean' as const },
        y: 'string',
    }, class Base {
    });
    
    class MyClass extends Base {
        get x() {
            return false;
        }
        get y() {
            ~
!!! error TS2611: 'y' is defined as a property in class 'Base & Properties<{ readonly x: "boolean"; y: "string"; }>', but is overridden here in 'MyClass' as an accessor.
            return 'hi'
        }
    }
    
    const mine = new MyClass();
    const value = mine.x;
    
    